test/errors/resolution/throwInNonThrowRelaxed.1.good
throwInNonThrowRelaxed.chpl:6: error: call to throwing function 'canThrow' without throws, try, or try! (relaxed mode)
throwInNonThrowRelaxed.chpl:1: In module 'M':
throwInNonThrowRelaxed.chpl:2: note: The function was declared to throw here
